Finsihed portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,12 @@
 .container {
     height: 150px;
 }
+
+body {
+    background-image: url("../img/white-painted-wall.jpg");
+    background-size: 100% auto;
+}
+
+textarea.form-control {
+    height: 200px;
+}
